fix: correct city status and add missing officials

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                             <div class="history-card-icon"><i class="bi bi-calendar-event"></i></div>
                             <div class="history-card-content">
                                 <h4>274 Years of History</h4>
-                                <p>From its foundation in 1752 to becoming a highly urbanized city in 2020, SJDM has grown from a small settlement to a thriving urban center with 62 barangays.</p>
+                                <p>From its foundation in 1752 to becoming a component city in 2000, SJDM has grown from a small settlement to a thriving urban center with 62 barangays.</p>
                             </div>
                         </div>
                     </div>
@@ -727,7 +727,7 @@
                 <div class="home-leadership-grid">
                     <div class="home-leader-card">
                         <div class="home-leader-badge" data-i18n="title-mayor">City Mayor</div>
-                        <h3>Hon. Florida B. Robes</h3>
+                        <h3>Hon. Florida L. Pérez-Robes</h3>
                         <div class="home-leader-contacts">
                             <a href="mailto:om.csjdm@gmail.com"><i class="bi bi-envelope"></i> om.csjdm@gmail.com</a>
                             <a href="tel:0449197370"><i class="bi bi-telephone"></i> (044) 919-7370 Local 3110</a>
