--- a/government/index.html
+++ b/government/index.html
@@ -12,7 +12,7 @@
       gtag('config', 'G-8777S9SP9X');
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="San Jose del Monte City, Bulacan government structure. Meet Mayor Florida B. Robes, Vice Mayor, Sangguniang Panlungsod members, city offices, and 62 barangay officials. Access office contacts and services.">
+    <meta name="description" content="San Jose del Monte City, Bulacan government structure. Meet Mayor Florida L. Pérez-Robes, Vice Mayor, Sangguniang Panlungsod members, city offices, and 62 barangay officials. Access office contacts and services.">
 
     <!-- SEO Meta Tags -->
     <meta name="author" content="Ramon Logan Jr.">
@@ -24,7 +24,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bettersjdm/government/">
     <meta property="og:title" content="Government Officials & Structure | BetterSJDM">
-    <meta property="og:description" content="Meet the government officials of San Jose del Monte City, Bulacan. Learn about the city structure, Mayor Florida B. Robes, Vice Mayor, Sangguniang Panlungsod members, and department heads.">
+    <meta property="og:description" content="Meet the government officials of San Jose del Monte City, Bulacan. Learn about the city structure, Mayor Florida L. Pérez-Robes, Vice Mayor, Sangguniang Panlungsod members, and department heads.">
     <meta property="og:image" content="https://bettersjdm/assets/images/banners/opengraph.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -300,7 +300,7 @@
                     <div class="executive-card">
                         <div class="executive-card-header">
                             <span class="executive-badge" data-i18n="title-mayor">City Mayor</span>
-                            <h4 class="executive-name">Hon. Florida B. Robes</h4>
+                            <h4 class="executive-name">Hon. Florida L. Pérez-Robes</h4>
                         </div>
                         <div class="executive-card-body">
                             <div class="executive-contacts">
@@ -322,6 +322,23 @@
                                 <a href="mailto:ovm.csjdm001@gmail.com"><i class="bi bi-envelope"></i> ovm.csjdm001@gmail.com</a>
                                 <a href="tel:0448156467"><i class="bi bi-telephone"></i> (044) 815-6467</a>
                                 <span><i class="bi bi-clock"></i> Mon-Fri: 8:00 AM - 5:00 PM</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Representative Card -->
+                <div style="margin-top: var(--spacing-lg);">
+                    <div class="executive-card">
+                        <div class="executive-card-header">
+                            <span class="executive-badge" style="background: linear-gradient(135deg, #6366f1 0%, #4f46e5 100%);">Congressional Representative</span>
+                            <h4 class="executive-name">Hon. Arturo B. Robes</h4>
+                            <p style="color: var(--color-text-light); font-size: 0.875rem; margin-top: 4px;">Lone District of San Jose del Monte City</p>
+                        </div>
+                        <div class="executive-card-body">
+                            <div class="executive-contacts">
+                                <span><i class="bi bi-building"></i> House of Representatives</span>
+                                <span><i class="bi bi-geo-alt"></i> Batasan Complex, Quezon City</span>
                             </div>
                         </div>
                     </div>
