fix: 2025 Citizens Charter compliance - comprehensive site cleanup

--- a/service-details/city-accounting.html
+++ b/service-details/city-accounting.html
@@ -168,7 +168,7 @@
             <button type="button" class="btn btn-secondary btn-sm lang-btn" data-lang="en">EN</button>
             <button type="button" class="btn btn-secondary btn-sm lang-btn" data-lang="fil">FIL</button>
         </div></div>
-    
+
             <button type="button" class="mobile-menu-toggle" aria-label="Open menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -305,7 +305,7 @@
                             <span class="fee-value">FREE (₱0.00)</span>
                         </div>
                         <div class="fee-time">
-                            <i class="bi bi-clock"></i> 17 minutes
+                            <i class="bi bi-clock"></i> 15-20 minutes
                         </div>
                     </div>
 
@@ -325,7 +325,7 @@
                                     <td>Receive request and verify IDs</td>
                                     <td><span class="time-tag">2 minutes</span></td>
                                     <td>
-                                        <span class="personnel-tag">Administrative Assistant / Administrative Aide</span>
+                                        <span class="personnel-tag">Accounting Staff / Bookkeeper</span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -333,7 +333,7 @@
                                     <td>Verify requestor's details and employment information from records</td>
                                     <td><span class="time-tag">6 minutes</span></td>
                                     <td>
-                                        <span class="personnel-tag">Administrative Assistant / Administrative Aide</span>
+                                        <span class="personnel-tag">Accounting Staff / Bookkeeper</span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -341,7 +341,7 @@
                                     <td>Encode, print, and sign certificate</td>
                                     <td><span class="time-tag">5 minutes</span></td>
                                     <td>
-                                        <span class="personnel-tag">Administrative Assistant / Administrative Aide</span>
+                                        <span class="personnel-tag">Accounting Staff / Bookkeeper</span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -357,7 +357,7 @@
                                     <td>Release certificate to requestor</td>
                                     <td><span class="time-tag">2 minutes</span></td>
                                     <td>
-                                        <span class="personnel-tag">Administrative Assistant / Administrative Aide</span>
+                                        <span class="personnel-tag">Accounting Staff / Bookkeeper</span>
                                     </td>
                                 </tr>
                             </tbody>
@@ -380,7 +380,7 @@
                     <div class="req-box">
                         <h4><i class="bi bi-file-earmark-text"></i> Requirements</h4>
                         <ul class="req-list">
-                            <li><i class="bi bi-check-circle-fill"></i> Two (2) valid IDs</li>
+                            <li><i class="bi bi-check-circle-fill"></i> One (1) Valid ID</li>
                             <li><i class="bi bi-check-circle-fill"></i> Statement of Account from GSIS/Pagibig/Philhealth</li>
                             <li><i class="bi bi-check-circle-fill"></i> Service Record (if necessary)</li>
                             <li><i class="bi bi-check-circle-fill"></i> Contact number (if necessary)</li>
@@ -393,7 +393,7 @@
                             <span class="fee-value">FREE (₱0.00)</span>
                         </div>
                         <div class="fee-time">
-                            <i class="bi bi-clock"></i> 2 days 10 minutes
+                            <i class="bi bi-clock"></i> 1-2 Working Days
                         </div>
                     </div>
 
@@ -426,7 +426,7 @@
                                 </tr>
                                 <tr>
                                     <td><span class="step-badge">3</span></td>
-                                    <td>Retrieve records from archives and photocopy remittances and official receipts</td>
+                                    <td>Retrieve and reconcile index cards/ledgers from archives and photocopy remittances and official receipts</td>
                                     <td><span class="time-tag">1 day 4 hours</span></td>
                                     <td>
                                         <span class="personnel-tag">Administrative Aide IV</span>
@@ -484,7 +484,7 @@
                     <div class="req-box">
                         <h4><i class="bi bi-file-earmark-text"></i> Requirements</h4>
                         <ul class="req-list">
-                            <li><i class="bi bi-check-circle-fill"></i> Two (2) valid IDs</li>
+                            <li><i class="bi bi-check-circle-fill"></i> One (1) Valid ID</li>
                             <li><i class="bi bi-check-circle-fill"></i> Service Record (if necessary)</li>
                             <li><i class="bi bi-check-circle-fill"></i> Contact number (if necessary)</li>
                         </ul>
@@ -579,7 +579,7 @@
                         <p>Certification Processing</p>
                     </div>
                     <div class="staff-card">
-                        <h4>Administrative Assistant / Aide</h4>
+                        <h4>Accounting Staff / Bookkeeper</h4>
                         <p>Document Processing</p>
                     </div>
                 </div>
