--- a/service-details/mswdo-services.html
+++ b/service-details/mswdo-services.html
@@ -167,7 +167,7 @@
             <button type="button" class="btn btn-secondary btn-sm lang-btn" data-lang="en">EN</button>
             <button type="button" class="btn btn-secondary btn-sm lang-btn" data-lang="fil">FIL</button>
         </div></div>
-    
+
             <button type="button" class="mobile-menu-toggle" aria-label="Open menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -459,7 +459,7 @@
                     <div class="req-box" style="margin-top: 14px;">
                         <h4><i class="bi bi-clock-history"></i> Processing Information</h4>
                         <ul class="req-list">
-                            <li><i class="bi bi-clock"></i> <strong>Total processing time: 14 minutes</strong></li>
+                            <li><i class="bi bi-clock"></i> <strong>Total processing time: 1-3 Working Days (Interview: 30 mins / Release: 1-3 Days)</strong></li>
                             <li><i class="bi bi-cash-coin"></i> <strong>Fee: FREE (₱0.00)</strong></li>
                             <li><i class="bi bi-info-circle"></i> Assistance for sickness, death, hunger, and calamity victims</li>
                         </ul>
@@ -477,7 +477,7 @@
                         <ul class="req-list">
                             <li><i class="bi bi-check-circle-fill"></i> Certificate of Residency or Indigency for PWD ID</li>
                             <li><i class="bi bi-check-circle-fill"></i> Four (4) pcs 1x1 picture (white background)</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Medical Certificate indicating Type of Disability with attachment of Medical Record signed by Public Doctor or City Health Physician</li>
+                            <li><i class="bi bi-check-circle-fill"></i> Medical Certificate indicating Type of Disability and Blood Type with attachment of Medical Record signed by Public Doctor or City Health Physician</li>
                             <li><i class="bi bi-check-circle-fill"></i> One (1) Valid ID of Contact Person in Case of Emergency</li>
                             <li><i class="bi bi-check-circle-fill"></i> Duly accomplished Application form (from CSWDO)</li>
                         </ul>
@@ -541,8 +541,7 @@
                         <ul class="req-list">
                             <li><i class="bi bi-check-circle-fill"></i> Barangay Certification of Senior Citizen ID</li>
                             <li><i class="bi bi-check-circle-fill"></i> Three (3) pcs 1x1 picture (any background)</li>
-                            <li><i class="bi bi-check-circle-fill"></i> PSA Birth Certificate</li>
-                            <li><i class="bi bi-check-circle-fill"></i> Cedula</li>
+                            <li><i class="bi bi-check-circle-fill"></i> PSA Birth Certificate or alternative document (Baptismal Certificate, School Records, etc.)</li>
                             <li><i class="bi bi-check-circle-fill"></i> Duly accomplished Application form (from CSWDO)</li>
                             <li><i class="bi bi-check-circle-fill"></i> One (1) Valid ID with Birthdate</li>
                         </ul>
@@ -609,6 +608,7 @@
                             <li><i class="bi bi-check-circle-fill"></i> Sworn Affidavit of Solo Parent Status</li>
                             <li><i class="bi bi-check-circle-fill"></i> Barangay Attestation</li>
                             <li><i class="bi bi-check-circle-fill"></i> Solo Parents Orientation Seminar Certificate</li>
+                            <li><i class="bi bi-check-circle-fill"></i> Income Tax Return (ITR) or Certificate of Non-Filing (for subsidy qualification)</li>
                         </ul>
                         <p style="margin-top: 10px; margin-bottom: 10px;"><strong>Additional Requirements by Specific Situation:</strong></p>
                         <ul class="req-list">
