--- a/service-details/tricycle-franchising.html
+++ b/service-details/tricycle-franchising.html
@@ -299,7 +299,7 @@
                     <div class="stat-card">
                         <i class="bi bi-list-ol"></i>
                         <h4>Franchise Steps</h4>
-                        <p>15 Steps</p>
+                        <p>5 Steps</p>
                     </div>
                     <div class="stat-card">
                         <i class="bi bi-file-text"></i>
@@ -309,7 +309,7 @@
                     <div class="stat-card">
                         <i class="bi bi-building"></i>
                         <h4>Office</h4>
-                        <p>BPLS / VMO / SBO</p>
+                        <p>TRU / SP Secretariat</p>
                     </div>
                     <div class="stat-card">
                         <i class="bi bi-clock"></i>
@@ -355,15 +355,15 @@
                         <div class="process-step">
                             <div class="process-card">
                                 <div class="process-num">02</div>
-                                <h4>Inspection & Evaluation</h4>
-                                <p>TRU accepts, evaluates documents and inspects tricycle unit (10 minutes)</p>
+                                <h4>Roadworthiness Inspection</h4>
+                                <p>TRU inspects tricycle unit (sidecar, lights, brakes) and evaluates documents (10 minutes)</p>
                             </div>
                         </div>
                         <div class="process-step">
                             <div class="process-card">
                                 <div class="process-num">03</div>
                                 <h4>Tax Assessment & Payment</h4>
-                                <p>TRU encodes data, assesses tax (₱1,287.50), issues Tax Order of Payment. Pay at cashier (15 minutes)</p>
+                                <p>TRU encodes data, assesses tax (Approx. ₱1,300 + CTPL Insurance). Pay at cashier (15 minutes)</p>
                             </div>
                         </div>
                         <div class="process-step">
@@ -390,7 +390,7 @@
                             <div class="process-card">
                                 <div class="process-num">01</div>
                                 <h4>Receiving Letter of Request</h4>
-                                <p>VMO/SBO Staff receives the letter of request</p>
+                                <p>SP Secretariat receives the letter of request for City Ordinance copy</p>
                             </div>
                         </div>
                         <div class="process-step">
