--- a/service-details/city-treasurer.html
+++ b/service-details/city-treasurer.html
@@ -279,7 +279,7 @@
                     <div class="info-box">
                         <h4>Payment Details</h4>
                         <ul class="req-list">
-                            <li><i class="bi bi-info-circle"></i> <strong>Fee:</strong> Based on assessed value (1.1% Basic + 1% SEF)</li>
+                            <li><i class="bi bi-info-circle"></i> <strong>Fee:</strong> Based on City Tax Ordinance (Basic + 1% SEF)</li>
                             <li><i class="bi bi-info-circle"></i> <strong>Discount:</strong> Early payment discount (if paid in January)</li>
                             <li><i class="bi bi-info-circle"></i> <strong>Penalty:</strong> 2% per month for late payment (max 36 months)</li>
                             <li><i class="bi bi-info-circle"></i> <strong>Processing:</strong> 5 minutes</li>
@@ -349,7 +349,7 @@
                             <li><i class="bi bi-check-circle-fill"></i> SEC/DTI Registration</li>
                             <li><i class="bi bi-check-circle-fill"></i> Business Permit</li>
                             <li><i class="bi bi-info-circle"></i> <strong>Basic Fee:</strong> ₱500.00</li>
-                            <li><i class="bi bi-info-circle"></i> <strong>Additional:</strong> ₱2.00 per ₱5,000 receipts (max ₱10,000 total)</li>
+                            <li><i class="bi bi-info-circle"></i> <strong>Additional:</strong> ₱2.00 per ₱5,000 receipts (max ₱10,500 total)</li>
                             <li><i class="bi bi-info-circle"></i> <strong>Processing:</strong> 5 minutes</li>
                         </ul>
                     </div>
@@ -369,7 +369,7 @@
                         <h4><i class="bi bi-file-text"></i> Tax Clearance</h4>
                         <p>Certificate of no tax liability for property transactions</p>
                         <div class="service-meta">
-                            <span>₱50.00 per RPU</span>
+                            <span>Approx. ₱50-100 per RPU</span>
                             <span>15 minutes</span>
                         </div>
                     </div>
@@ -401,7 +401,7 @@
                         <h4><i class="bi bi-calendar-range"></i> Payment Schedule</h4>
                         <p>Arrangement for installment payment of taxes</p>
                         <div class="service-meta">
-                            <span>Upon Approval</span>
+                            <span>Automatic Option</span>
                             <span>Quarterly</span>
                         </div>
                     </div>
@@ -487,7 +487,7 @@
                             <li><i class="bi bi-geo-alt"></i> City Hall, San Jose del Monte City, Bulacan</li>
                             <li><i class="bi bi-clock"></i> Monday - Friday: 8:00 AM - 5:00 PM</li>
                             <li><i class="bi bi-telephone"></i> 044-919-7370 Local 1116-17</li>
-                            <li><i class="bi bi-envelope"></i> cto_sjdm@yahoo.com.ph</li>
+                            <li><i class="bi bi-envelope"></i> ctosjdm@gmail.com</li>
                         </ul>
                     </div>
                     <div class="info-box">
