--- a/service-details/marriage-certificate.html
+++ b/service-details/marriage-certificate.html
@@ -195,7 +195,7 @@
             <button type="button" class="btn btn-secondary btn-sm lang-btn" data-lang="en">EN</button>
             <button type="button" class="btn btn-secondary btn-sm lang-btn" data-lang="fil">FIL</button>
         </div></div>
-    
+
             <button type="button" class="mobile-menu-toggle" aria-label="Open menu">
                 <i class="bi bi-list"></i>
             </button>
@@ -410,7 +410,7 @@
                             <ul class="req-list">
                                 <li><a href="birth-certificate.html">Birth Certificate</a></li>
                                 <li><a href="../services/certificates.html">Death Certificate</a></li>
-                                <li><a href="civil-registrar.html">Civil Registrar Services</a></li>
+                                <li><a href="city-civil-registrar.html">Civil Registrar Services</a></li>
                             </ul>
                         </div>
                         <div class="sidebar-card">
